Parity with old module

--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -116,6 +116,7 @@ jobs:
             `# The files that will be included.` \
             module.json                          \
             README.md                            \
+            changelog.md                         \
             LICENSE                              \
             templates                            \
             scripts/                             \
